--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Beta3 
	- Fixed seeking on random track, giving you a new track every	
		seek 
	- Added additional error reporting if localplay access / config
		fails
	- Give Admins Full Localplay Regardless
	- Fixed incorrect reference to ellipsis thresholds 
	- Fixed page point not being remembered by the back button
	- Fixed naming restrictions on database name during install
	- Fixed issue where verify updated all songs in the catalog even
		if there was no change
	- Fixed recently played, only shows distinct songs
	- Fixed enabling of localplay modules, now correctly enables
		localplay for the activating user
	- Added single genre and playlist XML methods
	- Changed erorr message on XML api, now based of HTTP error codes
	- Split out ACL and Session Expire errors on XML API 
	- Made Alpha Match box on browse "find as you type" (Thx Spocky)
	- Modified Shoutbox Styles (Thx Spocky)

--------------------------------------------------------------------------
  v.3.4-Beta2 03/16/2008
	- Added Cooldown Functionality to Democratic Play
	- Added /bin/fix_filenames.inc for correcting filenames with
		invalid chars
	- Removed album art add on Verify now that there is a distinct
		action for it 
	- Added ICONV check to ensure filenames are of correct charset 
		before inserting into the database
	- Fixed issue with encoding of id3v1/v2 tags
	- Fixed an issue with the clean function for playlists
	- DB Update, fixes the playlist create issue with full strict on
		MySQL 5.x
	- Corrected mime type for JPG (Thx CoF)
	- Added Catalog Last Update and Last Add times to API Handshake. 
	- Fixed Remember Me Cookie so it's actually set