@@ -37,6 +37,7 @@
 <td class="cel_artist"><?php echo $album->f_artist_link; ?></td>
 <td class="cel_songs"><?php echo $album->song_count; ?></td>
 <td class="cel_year"><?php echo $album->year; ?></td>
+<td class="cel_rating" id="rating_<?php echo $album->id; ?>_album"><?php Rating::show($album->id,'album'); ?></td>
 <td class="cel_action">
 	<?php if (Config::get('shoutbox')) { ?>
 		<a href="<?php echo Config::get('web_path'); ?>/shout.php?action=show_add_shout&amp;type=album&amp;id=<?php echo $album->id; ?>">
